trybuild-qcell/src/compiletest/lcell_generativity-00.stderr
error[E0382]: borrow of moved value: `owner1`
  --> src/compiletest/lcell_generativity-00.rs:10:22
   |
8  |     let mut owner1 = LCellOwner::new(guard1);
   |         ---------- move occurs because `owner1` has type `LCellOwner<'_>`, which does not implement the `Copy` trait
9  |     let owner2 = owner1;
   |                  ------ value moved here
10 |     let rc = Rc::new(owner1.cell(100u32)); // Compile fail
   |                      ^^^^^^^^^^^^^^^^^^^ value borrowed here after move
